# esp32rs485

./: .cursorignore  .gitignore  CMakeLists.txt  QWEN.md  sdkconfig
.cursor/rules/: hardware-spec.mdc  io.mdc  power.mdc  rs485.mdc  ws2812.mdc
.qwen/: settings.json
designs/: ble.md  hardware-spec.md  power_management.md
main/: CMakeLists.txt  ble.c  ble.h  idf_component.yml  main.c  power_management.c  power_management.h
main/ulp/: power.c
